feat(engine): 集成性能指标收集和改进日志系统
- 替换 LazyLogging 为自定义 CDCLogging 以增强日志功能
- 添加 PerformanceLogger 定期输出性能指标统计
- 集成 metrics 到 ApplyWorker 和 CDCStreamPipeline 组件
- 优化日志输出格式，使用彩色控制台编码器提升可读性
- 改进事件应用日志，显示详细的数据变更信息
- 添加批量操作的性能指标记录功能
- 更新 README 包含详细的配置说明和运维指南